# resource-pool

./: .gitignore  README.md  REPO_SETTINGS.md  pyproject.toml  rename_module.py  test_result.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
dns_resolver_pool/: __init__.py  exceptions.py  pool.py  pool_async.py  servers.py
docs/: CHANGELOG.md  EXCEPTIONS.md  PRODUCTION.md  UPGRADE_PLAN.md
docs/guides/: cookbook.md  deep-dive.md  quickstart.md  从零到反反爬.md  初级定制.md  底层源码.md  开箱即用.md  深度定制.md
examples/: __init__.py  async_integration.py  quickstart.py  real_crawler_demo.py  scrapy_integration.py  simple_requests_demo.py  stress_test.py
nurture_pool/: __init__.py  _feeding.py  _shortcuts.py  base.py  exceptions.py  orchestrator.py  orchestrator_async.py
nurture_pool/data/: proxy_servers.json
nurture_pool/data/schema/: dns_format.json  proxy_format.json  ua_format.json
proxy_pool/: __init__.py  exceptions.py  pool.py  pool_async.py  servers.py
resource_pool/: __init__.py  _feeding.py  _shortcuts.py  base.py  base_async.py  orchestrator.py  orchestrator_async.py
resource_pool/data/: dns_servers.json  header_profiles.json  ua_templates.json
tests/: REFACTOR_PLAN.txt  __init__.py  fakeua_export.json  ssr2.py  test_async.py  test_concurrency.py  test_dns_resolver_pool.py  test_end_to_end.py  test_orchestrator.py  test_proxy_pool.py  test_real_world.py  test_stress_benchmark.py  test_user_agent_pool.py
tests/live_demo/: test_async.py  test_multi_process.py  test_multi_thread.py  test_scrapy.py  test_single_thread.py
tests/live_demo/scrapy_demo/scrapy_demo/: middlewares.py
user_agent_pool/: __init__.py  agents.py  exceptions.py  headers_pool.jsonl  pool.py  pool_async.py  ua_seeds.json
