[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-pool"
version = "1.0.2"
description = "可扩展的网络资源池框架，内置 User-Agent 池（含 Header Profile 组）+ DNS 解析器池 + 代理池"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.6",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/nianchen8/resource-pool"

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.9"]
httpx = ["httpx>=0.27"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["resource_pool*", "user_agent_pool*", "dns_resolver_pool*", "proxy_pool*"]

[tool.setuptools.package-data]
"resource_pool" = ["py.typed"]
"user_agent_pool" = ["py.typed"]
"dns_resolver_pool" = ["py.typed"]
"proxy_pool" = ["py.typed"]
