[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nurture-pool"
version = "1.3.4"
description = "Nurturing resource pool for crawlers — User-Agent, DNS resolver, and proxy pools that grow smarter with every request"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.6",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/nianchen8/nurture-pool"

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.9"]
httpx = ["httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-timeout>=2.3", "pytest-cov>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nurture_pool*", "user_agent_pool*", "dns_resolver_pool*", "proxy_pool*"]

[tool.setuptools.package-data]
"nurture_pool" = ["py.typed", "data/*.json", "data/schema/*.json"]
"user_agent_pool" = ["py.typed", "headers_pool.jsonl", "ua_seeds.json"]
"dns_resolver_pool" = ["py.typed"]
"proxy_pool" = ["py.typed"]
